--- a/pages/service.html
+++ b/pages/service.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Талан - Юридическая компания</title>
-		<link rel="stylesheet" href="../styles/css/*-page.css" />
+		<link rel="stylesheet" href="../styles/css/service-page.css" />
 		<link rel="stylesheet" href="../media/icon-font/style.css" />
 	</head>
 	<body>
@@ -190,7 +190,118 @@
 			</div>
 		</dialog>
 		<main>
-
+			<section class="service">
+				<div class="service__container">
+					<div class="service__header">
+						<div class="service__titlebox">
+							<h1 class="service__title">Интеллектуальная собственность</h1>
+							<ul class="service__subtitle">
+								<li class="service__subtitle-item">
+									Наши действия во всех случаях направлены на достижение положительного результата рассматриваемого дела, посредством прекращения производства по делу. Мы выясняем на этапе ознакомления с материалами каждого конкретного дела, ведь привлекаемое лицо не может быть признано таковым, пока не доказана его вина в полном объеме и соответствующими доказательствами.
+								</li>
+								<li class="service__subtitle-item">Поэтому, во всех случаях, мы детально подходим к существу правонарушения и перспектив того или иного спора.</li>
+							</ul>
+						</div>
+						<div class="service__header-imagebox">
+							<picture class="service__header-image-wrapper">
+								<img class="service__header-image" src="../media/content/img/services/service4.jpg" alt="#" />
+							</picture>
+						</div>
+					</div>
+					<div class="service__body">
+						<div class="service__body-imagebox">
+							<picture class="service__body-image-wrapper">
+								<img class="service__body-image" src="../media/content/img/services/service3.jpg" alt="#" />
+							</picture>
+						</div>
+						<div class="service__desc-container">
+							<h2 class="service__desc">Данная услуга<br />включает:</h2>
+						</div>
+						<div class="service__content">
+							<ul class="service__list">
+								<li class="service__list-item service__list-item--marked">Ознакомление с материалами дела и правовая оценка перспектив административного дела.</li>
+								<li class="service__list-item service__list-item--marked">Определение оснований для прекращения производство по делу.</li>
+								<li class="service__list-item service__list-item--marked">Подготовка процессуальной документации (жалоба на постановление об административном правонарушении).</li>
+								<li class="service__list-item service__list-item--marked">Истребование доказательств в обоснование занимаемой позиции.</li>
+								<li class="service__list-item service__list-item--marked">Непосредственное участие при рассмотрении дела в арбитражном суде или суде общей юрисдикции.</li>
+								<li class="service__list-item service__list-item--marked">Обжалование решение суда в апелляционной, кассационной, надзорной и иных инстанциях.</li>
+							</ul>
+							<a class="service__button" href="#">Скачать прайс-лист<i class="service__button--icon icon-arrow"></i></a>
+							<ul class="service__list">
+								<li class="service__list-item service__list-item--title">Ведение дел об интеллектуальной собственности обычно связано со следующими сферами деятельности:</li>
+								<li class="service__list-item service__list-item--marked">здоровьем, санитарно-эпидемиологическим благополучием населения и общественной нравственности (глава 6);</li>
+								<li class="service__list-item service__list-item--marked">охраной собственности (глава 7);</li>
+								<li class="service__list-item service__list-item--marked">охраной окружающей среды и природопользования (глава 8);</li>
+								<li class="service__list-item service__list-item--marked">в области промышленности, строительстве и энергетике (глава 9);</li>
+								<li class="service__list-item service__list-item--marked">правонарушений на транспорте (глава 11);</li>
+								<li class="service__list-item service__list-item--marked">в области связи и информации (глава 13);</li>
+								<li class="service__list-item service__list-item--marked">финансов, налогов, и сборов, страхования, рынка ценных бумаг (глава 15);</li>
+								<li class="service__list-item service__list-item--marked">в области нарушения таможенных правил;</li>
+								<li class="service__list-item service__list-item--marked">иные споры.</li>
+							</ul>
+							<ul class="service__list">
+								<li class="service__list-item service__list-item--title">Услуга предназначена для следующих юридических лиц:</li>
+								<li class="service__list-item service__list-item--marked-number">Индивидуальных предпринимателей.</li>
+								<li class="service__list-item service__list-item--marked-number">Обществ с ограниченной ответственностью.</li>
+								<li class="service__list-item service__list-item--marked-number">Акционерных обществ.</li>
+								<li class="service__list-item service__list-item--marked-number">Товариществ с ограниченной ответственностью.</li>
+								<li class="service__list-item service__list-item--marked-number">Обществ с дополнительной ответственностью.</li>
+								<li class="service__list-item service__list-item--marked-number">Иных лиц, предусмотренных действующим законодательством.</li>
+								<li class="service__list-item service__list-item">Услуга юриста предназначена для отраслей экономики, не противоречащей действующему законодательству РФ.</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</section>
+			<section class="connection">
+				<div class="connection__container">
+					<div class="connection__titlebox">
+						<h2 class="connection__title">Будем на связи</h2>
+						<ul class="connection__links">
+							<li><a class="connection__links-item" data-hover-text="vk" target="_blank" href="https://vk.com">vk</a></li>
+							<li><a class="connection__links-item" data-hover-text="telegram" target="_blank" href="https://web.telegram.org">telegram</a></li>
+							<li><a class="connection__links-item" data-hover-text="tik tok" target="_blank" href="https://www.tiktok.com">tik tok</a></li>
+							<li><a class="connection__links-item" data-hover-text="hello@talan.ru" target="_blank" href="mailto:hello@talan.ru">hello@talan.ru</a></li>
+							<li><a class="connection__links-item" data-hover-text="+7 (999) 987-65-43" target="_blank" href="tel:+79999876543">+7 (999) 987-65-43</a></li>
+						</ul>
+					</div>
+					<form class="connection__form" action="">
+						<div class="connection__inputbox">
+							<div class="connection__input-wrapper">
+								<input id="input-name" class="connection__input" type="text" required placeholder="Ваше имя" />
+							</div>
+							<div class="connection__input-wrapper">
+								<input id="input-tel" class="connection__input" type="tel" data-type="input-tel" required placeholder="Номер телефона" />
+							</div>
+							<div class="connection__select select" tabindex="0" role="combobox">
+								<input id="input-service" class="connection__input connection__select-input select__input" type="text" placeholder="Услуга (опционально)" tabindex="-1" readonly />
+								<i class="connection__select-icon select__icon icon-check-mark"></i>
+								<ul class="connection__select-dropdown select__dropdown" role="listbox">
+									<li class="connection__select-item select__item" role="option" tabindex="0">Административное право</li>
+									<li class="connection__select-item select__item" role="option" tabindex="0">Антимонопольное право</li>
+									<li class="connection__select-item select__item" role="option" tabindex="0">Интеллектуальная собственность</li>
+									<li class="connection__select-item select__item" role="option" tabindex="0">Корпоративное право</li>
+									<li class="connection__select-item select__item" role="option" tabindex="0">Международные споры</li>
+									<li class="connection__select-item select__item" role="option" tabindex="0">Налоговое право</li>
+									<li class="connection__select-item select__item" role="option" tabindex="0">Семейные споры</li>
+									<li class="connection__select-item select__item" role="option" tabindex="0">Трудовое право</li>
+									<li class="connection__select-item select__item" role="option" tabindex="0">Финансы</li>
+									<li class="connection__select-item select__item" role="option" tabindex="0">Другое...</li>
+								</ul>
+							</div>
+							<div class="connection__inputr connection__input-wrapper--custom">
+								<textarea id="input-comment" class="connection__input connection__input--custom" placeholder="Опишите задачу (не обязательно)"></textarea>
+							</div>
+						</div>
+						<p class="connection__footnote">Отправляя запрос, вы соглашаетесь с <a class="connection__footnote-link" target="_blank" href="privacy-policy.html">политикой конфиденциальности</a></p>
+						<button class="connection__button" type="submit">Отправить запрос<i class="connection__button--icon icon-arrow"></i></button>
+					</form>
+				</div>
+				<div class="connection__fog">
+					<div class="connection__fog-layer connection__fog-layer--1"></div>
+					<div class="connection__fog-layer connection__fog-layer--2"></div>
+				</div>
+			</section>
 		</main>
 		<footer class="footer">
 			<div class="footer__container">
