--- a/pages/cases/template.html
+++ b/pages/cases/template.html
@@ -268,7 +268,7 @@
 			</section>
             <section class="hint">
                 <div class="hint__container">
-                    <p class="hint__title">Следующая<br>статья</p>
+                    <p class="hint__title">Следующая статья</p>
                     <div class="hint__body">
                         <div class="hint__body-container">
                             <picture class="hint__image-wrapper">
