--- a/pages/news.html
+++ b/pages/news.html
@@ -42,49 +42,49 @@
 				<div class="dropdown__body">
 					<ul class="dropdown__list" data-type="juridical">
 						<li class="dropdown__item">
-							<a href="./pages/service.html">Административное право</a>
+							<a href="service.html">Административное право</a>
 							<picture class="dropdown__image-wrapper">
 								<img class="dropdown__image" src="../media/content/img/services/service4.jpg" alt="#" />
 							</picture>
 						</li>
 						<li class="dropdown__item">
-							<a href="./pages/service.html">Антимонопольное право</a>
+							<a href="service.html">Антимонопольное право</a>
 							<picture class="dropdown__image-wrapper">
 								<img class="dropdown__image" src="../media/content/img/services/service4.jpg" alt="#" />
 							</picture>
 						</li>
 						<li class="dropdown__item">
-							<a href="./pages/service.html">Корпоративное право</a>
+							<a href="service.html">Корпоративное право</a>
 							<picture class="dropdown__image-wrapper">
 								<img class="dropdown__image" src="../media/content/img/services/service4.jpg" alt="#" />
 							</picture>
 						</li>
 						<li class="dropdown__item">
-							<a href="./pages/service.html">Международные споры</a>
+							<a href="service.html">Международные споры</a>
 							<picture class="dropdown__image-wrapper">
 								<img class="dropdown__image" src="../media/content/img/services/service4.jpg" alt="#" />
 							</picture>
 						</li>
 						<li class="dropdown__item">
-							<a href="./pages/service.html">Налоговое право</a>
+							<a href="service.html">Налоговое право</a>
 							<picture class="dropdown__image-wrapper">
 								<img class="dropdown__image" src="../media/content/img/services/service4.jpg" alt="#" />
 							</picture>
 						</li>
 						<li class="dropdown__item">
-							<a href="./pages/service.html">Семейные споры</a>
+							<a href="service.html">Семейные споры</a>
 							<picture class="dropdown__image-wrapper">
 								<img class="dropdown__image" src="../media/content/img/services/service4.jpg" alt="#" />
 							</picture>
 						</li>
 						<li class="dropdown__item">
-							<a href="./pages/service.html">Трудовое право</a>
+							<a href="service.html">Трудовое право</a>
 							<picture class="dropdown__image-wrapper">
 								<img class="dropdown__image" src="../media/content/img/services/service4.jpg" alt="#" />
 							</picture>
 						</li>
 						<li class="dropdown__item">
-							<a href="./pages/service.html">Финансы</a>
+							<a href="service.html">Финансы</a>
 							<picture class="dropdown__image-wrapper">
 								<img class="dropdown__image" src="../media/content/img/services/service4.jpg" alt="#" />
 							</picture>
@@ -92,7 +92,7 @@
 					</ul>
 					<ul class="dropdown__list" data-type="physical">
 						<li class="dropdown__item">
-							<a href="./pages/service.html">Конституционное право</a>
+							<a href="service.html">Конституционное право</a>
 							<picture class="dropdown__image-wrapper">
 								<img class="dropdown__image" src="../media/content/img/services/service4.jpg" alt="#" />
 							</picture>
@@ -104,37 +104,37 @@
 							</picture>
 						</li>
 						<li class="dropdown__item">
-							<a href="./pages/service.html">Корпоративное право</a>
+							<a href="service.html">Корпоративное право</a>
 							<picture class="dropdown__image-wrapper">
 								<img class="dropdown__image" src="../media/content/img/services/service4.jpg" alt="#" />
 							</picture>
 						</li>
 						<li class="dropdown__item">
-							<a href="./pages/service.html">Международные споры</a>
+							<a href="service.html">Международные споры</a>
 							<picture class="dropdown__image-wrapper">
 								<img class="dropdown__image" src="../media/content/img/services/service4.jpg" alt="#" />
 							</picture>
 						</li>
 						<li class="dropdown__item">
-							<a href="./pages/service.html">Налоговое право</a>
+							<a href="service.html">Налоговое право</a>
 							<picture class="dropdown__image-wrapper">
 								<img class="dropdown__image" src="../media/content/img/services/service4.jpg" alt="#" />
 							</picture>
 						</li>
 						<li class="dropdown__item">
-							<a href="./pages/service.html">Семейные споры</a>
+							<a href="service.html">Семейные споры</a>
 							<picture class="dropdown__image-wrapper">
 								<img class="dropdown__image" src="../media/content/img/services/service4.jpg" alt="#" />
 							</picture>
 						</li>
 						<li class="dropdown__item">
-							<a href="./pages/service.html">Трудовое право</a>
+							<a href="service.html">Трудовое право</a>
 							<picture class="dropdown__image-wrapper">
 								<img class="dropdown__image" src="../media/content/img/services/service4.jpg" alt="#" />
 							</picture>
 						</li>
 						<li class="dropdown__item">
-							<a href="./pages/service.html">Финансы</a>
+							<a href="service.html">Финансы</a>
 							<picture class="dropdown__image-wrapper">
 								<img class="dropdown__image" src="../media/content/img/services/service4.jpg" alt="#" />
 							</picture>
@@ -215,7 +215,7 @@
                                     <li class="news__text-item news__text-item--title">Отмена судебного приказа в гражданском производстве: Неожиданный исход стандартного кейса</li>
                                     <li class="news__text-item">Бюро TALAN провело детальный аудит налоговых расходов компании и разработало стратегию оптимизации, позволив снизить налоговую нагрузку на 30%. Благодаря оперативным и&nbsp;грамотным решениям клиент смог существенно повысить финансовую стабильность и&nbsp;сосредоточиться на развитии бизнеса.</li>
                                 </ul>
-                                <a class="news__link" href="#">Читать статью <i class="news__link--icon icon-arrow"></i></a>
+                                <a class="news__link" href="./articles/temlate.html">Читать статью <i class="news__link--icon icon-arrow"></i></a>
                             </div>
                         </li>
 
@@ -229,7 +229,7 @@
                                     <li class="news__text-item news__text-item--title">Налоговый спор крупного бизнеса</li>
                                     <li class="news__text-item">Бюро TALAN провело детальный аудит налоговых расходов компании и разработало стратегию оптимизации, позволив снизить налоговую нагрузку на 30%. Благодаря оперативным и грамотным решениям клиент смог существенно повысить финансовую стабильность и сосредоточиться на развитии бизнеса.</li>
                                 </ul>
-                                <a class="news__link" href="#">Читать статью <i class="news__link--icon icon-arrow"></i></a>
+                                <a class="news__link" href="./articles/temlate.html">Читать статью <i class="news__link--icon icon-arrow"></i></a>
                             </div>
                         </li>
 
@@ -243,7 +243,7 @@
                                     <li class="news__text-item news__text-item--title">О госпошлине по делам о возмещении ущерба</li>
                                     <li class="news__text-item">Бюро TALAN провело детальный аудит налоговых расходов компании и разработало стратегию оптимизации, позволив снизить налоговую нагрузку на 30%. Благодаря оперативным и грамотным решениям клиент смог существенно повысить финансовую стабильность и сосредоточиться на развитии бизнеса.</li>
                                 </ul>
-                                <a class="news__link" href="#">Читать статью <i class="news__link--icon icon-arrow"></i></a>
+                                <a class="news__link" href="./articles/temlate.html">Читать статью <i class="news__link--icon icon-arrow"></i></a>
                             </div>
                         </li>
 
@@ -257,7 +257,7 @@
                                     <li class="news__text-item news__text-item--title">Отказ от тура в условиях коронавируса COVID-19</li>
                                     <li class="news__text-item">Бюро TALAN провело детальный аудит налоговых расходов компании и разработало стратегию оптимизации, позволив снизить налоговую нагрузку на 30%. Благодаря оперативным и грамотным решениям клиент смог существенно повысить финансовую стабильность и сосредоточиться на развитии бизнеса.</li>
                                 </ul>
-                                <a class="news__link" href="#">Читать статью <i class="news__link--icon icon-arrow"></i></a>
+                                <a class="news__link" href="./articles/temlate.html">Читать статью <i class="news__link--icon icon-arrow"></i></a>
                             </div>
                         </li>
 
@@ -271,7 +271,7 @@
                                     <li class="news__text-item news__text-item--title">Отмена судебного приказа в гражданском производстве. Неожиданный исход стандартного кейса</li>
                                     <li class="news__text-item">Бюро TALAN провело детальный аудит налоговых расходов компании и разработало стратегию оптимизации, позволив снизить налоговую нагрузку на 30%. Благодаря оперативным и грамотным решениям клиент смог существенно повысить финансовую стабильность и сосредоточиться на развитии бизнеса.</li>
                                 </ul>
-                                <a class="news__link" href="#">Читать статью <i class="news__link--icon icon-arrow"></i></a>
+                                <a class="news__link" href="./articles/temlate.html">Читать статью <i class="news__link--icon icon-arrow"></i></a>
                             </div>
                         </li>
                         
