--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -42,49 +42,49 @@
 				<div class="dropdown__body">
 					<ul class="dropdown__list" data-type="juridical">
 						<li class="dropdown__item">
-							<a href="./pages/service.html">Административное право</a>
+							<a href="service.html">Административное право</a>
 							<picture class="dropdown__image-wrapper">
 								<img class="dropdown__image" src="../media/content/img/services/service4.jpg" alt="#" />
 							</picture>
 						</li>
 						<li class="dropdown__item">
-							<a href="./pages/service.html">Антимонопольное право</a>
+							<a href="service.html">Антимонопольное право</a>
 							<picture class="dropdown__image-wrapper">
 								<img class="dropdown__image" src="../media/content/img/services/service4.jpg" alt="#" />
 							</picture>
 						</li>
 						<li class="dropdown__item">
-							<a href="./pages/service.html">Корпоративное право</a>
+							<a href="service.html">Корпоративное право</a>
 							<picture class="dropdown__image-wrapper">
 								<img class="dropdown__image" src="../media/content/img/services/service4.jpg" alt="#" />
 							</picture>
 						</li>
 						<li class="dropdown__item">
-							<a href="./pages/service.html">Международные споры</a>
+							<a href="service.html">Международные споры</a>
 							<picture class="dropdown__image-wrapper">
 								<img class="dropdown__image" src="../media/content/img/services/service4.jpg" alt="#" />
 							</picture>
 						</li>
 						<li class="dropdown__item">
-							<a href="./pages/service.html">Налоговое право</a>
+							<a href="service.html">Налоговое право</a>
 							<picture class="dropdown__image-wrapper">
 								<img class="dropdown__image" src="../media/content/img/services/service4.jpg" alt="#" />
 							</picture>
 						</li>
 						<li class="dropdown__item">
-							<a href="./pages/service.html">Семейные споры</a>
+							<a href="service.html">Семейные споры</a>
 							<picture class="dropdown__image-wrapper">
 								<img class="dropdown__image" src="../media/content/img/services/service4.jpg" alt="#" />
 							</picture>
 						</li>
 						<li class="dropdown__item">
-							<a href="./pages/service.html">Трудовое право</a>
+							<a href="service.html">Трудовое право</a>
 							<picture class="dropdown__image-wrapper">
 								<img class="dropdown__image" src="../media/content/img/services/service4.jpg" alt="#" />
 							</picture>
 						</li>
 						<li class="dropdown__item">
-							<a href="./pages/service.html">Финансы</a>
+							<a href="service.html">Финансы</a>
 							<picture class="dropdown__image-wrapper">
 								<img class="dropdown__image" src="../media/content/img/services/service4.jpg" alt="#" />
 							</picture>
@@ -92,7 +92,7 @@
 					</ul>
 					<ul class="dropdown__list" data-type="physical">
 						<li class="dropdown__item">
-							<a href="./pages/service.html">Конституционное право</a>
+							<a href="service.html">Конституционное право</a>
 							<picture class="dropdown__image-wrapper">
 								<img class="dropdown__image" src="../media/content/img/services/service4.jpg" alt="#" />
 							</picture>
@@ -104,37 +104,37 @@
 							</picture>
 						</li>
 						<li class="dropdown__item">
-							<a href="./pages/service.html">Корпоративное право</a>
+							<a href="service.html">Корпоративное право</a>
 							<picture class="dropdown__image-wrapper">
 								<img class="dropdown__image" src="../media/content/img/services/service4.jpg" alt="#" />
 							</picture>
 						</li>
 						<li class="dropdown__item">
-							<a href="./pages/service.html">Международные споры</a>
+							<a href="service.html">Международные споры</a>
 							<picture class="dropdown__image-wrapper">
 								<img class="dropdown__image" src="../media/content/img/services/service4.jpg" alt="#" />
 							</picture>
 						</li>
 						<li class="dropdown__item">
-							<a href="./pages/service.html">Налоговое право</a>
+							<a href="service.html">Налоговое право</a>
 							<picture class="dropdown__image-wrapper">
 								<img class="dropdown__image" src="../media/content/img/services/service4.jpg" alt="#" />
 							</picture>
 						</li>
 						<li class="dropdown__item">
-							<a href="./pages/service.html">Семейные споры</a>
+							<a href="service.html">Семейные споры</a>
 							<picture class="dropdown__image-wrapper">
 								<img class="dropdown__image" src="../media/content/img/services/service4.jpg" alt="#" />
 							</picture>
 						</li>
 						<li class="dropdown__item">
-							<a href="./pages/service.html">Трудовое право</a>
+							<a href="service.html">Трудовое право</a>
 							<picture class="dropdown__image-wrapper">
 								<img class="dropdown__image" src="../media/content/img/services/service4.jpg" alt="#" />
 							</picture>
 						</li>
 						<li class="dropdown__item">
-							<a href="./pages/service.html">Финансы</a>
+							<a href="service.html">Финансы</a>
 							<picture class="dropdown__image-wrapper">
 								<img class="dropdown__image" src="../media/content/img/services/service4.jpg" alt="#" />
 							</picture>
