--- a/pages/about.html
+++ b/pages/about.html
@@ -617,9 +617,8 @@
 						<button class="connection__button" data-form-open>Написать нам<i class="connection__button--icon icon-arrow"></i></button>
 					</div>
 				</div>
-				<div class="connection__fog">
-					<div class="connection__fog-layer connection__fog-layer--1"></div>
-					<div class="connection__fog-layer connection__fog-layer--2"></div>
+				<div class="blobs-wrapper">
+					<img src="../media/services/blobs.svg" alt="" class="blobs" />
 				</div>
 			</section>
 		</main>
