--- a/pages/service.html
+++ b/pages/service.html
@@ -297,9 +297,8 @@
 						<button class="connection__button" type="submit">Отправить запрос<i class="connection__button--icon icon-arrow"></i></button>
 					</form>
 				</div>
-				<div class="connection__fog">
-					<div class="connection__fog-layer connection__fog-layer--1"></div>
-					<div class="connection__fog-layer connection__fog-layer--2"></div>
+				<div class="blobs-wrapper">
+					<img src="../media/services/blobs.svg" alt="" class="blobs" />
 				</div>
 			</section>
 		</main>
