--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 						</div>
 						<div class="intro__videobox">
 							<a class="intro__video-wrapper" href="#">
-								<video class="intro__video" muted autoplay loop>
+								<video class="intro__video" muted autoplay loop playsinline>
 									<source src="media/content/video/confused-travolta.mp4" type="video/mp4" />
 								</video>
 								<p class="intro__video-desc"><i class="icon-play"></i>Как мы помогаем клиентам</p>
