--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
 					<div class="services__body">
 						<ul class="services__list" data-type="juridical">
 							<li>
-								<a class="services__item" href="./pages/">
+								<a class="services__item" href="./pages/service.html">
 									<div class="services__number"></div>
 									<h4 class="services__name">Административное право</h4>
 									<p class="services__desc">Рассмотрение дел о нарушениях административного законодательства, в том числе штрафных дел, лицензировании и деятельности государственных органов</p>
@@ -309,7 +309,7 @@
 								</a>
 							</li>
 							<li>
-								<a class="services__item" href="./pages/">
+								<a class="services__item" href="./pages/service.html">
 									<div class="services__number"></div>
 									<h4 class="services__name">Антимономольное право</h4>
 									<p class="services__desc">Направлено на предотвращение недобросовестной конкуренции, монополизации рынков, защиту прав потребителей и обеспечение свободы предпринимательства</p>
@@ -324,7 +324,7 @@
 								</a>
 							</li>
 							<li>
-								<a class="services__item" href="./pages/">
+								<a class="services__item" href="./pages/service.html">
 									<div class="services__number"></div>
 									<h4 class="services__name">Корпоративное право</h4>
 									<p class="services__desc">Регулирует отношения между участниками (акционерами, участниками) коммерческих организаций, вопросы управления, распределения прибыли и другие аспекты деятельности корпораций</p>
@@ -339,7 +339,7 @@
 								</a>
 							</li>
 							<li>
-								<a class="services__item" href="./pages/">
+								<a class="services__item" href="./pages/service.html">
 									<div class="services__number"></div>
 									<h4 class="services__name">Налоговое право</h4>
 									<p class="services__desc">Разрешение споров между налогоплательщиками и налоговыми органами, связанных с уплатой налогов, налоговыми проверками и налоговыми вычетами</p>
@@ -354,7 +354,7 @@
 								</a>
 							</li>
 							<li>
-								<a class="services__item" href="./pages/">
+								<a class="services__item" href="./pages/service.html">
 									<div class="services__number"></div>
 									<h4 class="services__name">Трудовое право</h4>
 									<p class="services__desc">Разрешение конфликтов между работодателями и работниками, связанных с трудовыми отношениями, заработной платой, увольнением и дискриминацией</p>
@@ -369,7 +369,7 @@
 								</a>
 							</li>
 							<li>
-								<a class="services__item" href="./pages/">
+								<a class="services__item" href="./pages/service.html">
 									<div class="services__number"></div>
 									<h4 class="services__name">Интеллектуальная собственность</h4>
 									<p class="services__desc">Включает в себя защиту авторских прав, патентов, товарных знаков, коммерческих секретов и других объектов интеллектуальной собственности</p>
@@ -386,7 +386,7 @@
 						</ul>
 						<ul class="services__list" data-type="physical">
 							<li>
-								<a class="services__item" href="./pages/">
+								<a class="services__item" href="./pages/service.html">
 									<div class="services__number"></div>
 									<h4 class="services__name">Конституционное (государственное) право</h4>
 									<p class="services__desc">Рассмотрение дел о нарушениях административного законодательства, в том числе штрафных дел, лицензировании и деятельности государственных органов</p>
@@ -401,7 +401,7 @@
 								</a>
 							</li>
 							<li>
-								<a class="services__item" href="./pages/">
+								<a class="services__item" href="./pages/service.html">
 									<div class="services__number"></div>
 									<h4 class="services__name">Гражданское право</h4>
 									<p class="services__desc">Направлено на предотвращение недобросовестной конкуренции, монополизации рынков, защиту прав потребителей и обеспечение свободы предпринимательства</p>
@@ -416,7 +416,7 @@
 								</a>
 							</li>
 							<li>
-								<a class="services__item" href="./pages/">
+								<a class="services__item" href="./pages/service.html">
 									<div class="services__number"></div>
 									<h4 class="services__name">Уголовное право</h4>
 									<p class="services__desc">Регулирует отношения между участниками (акционерами, участниками) коммерческих организаций, вопросы управления, распределения прибыли и другие аспекты деятельности корпораций</p>
@@ -431,7 +431,7 @@
 								</a>
 							</li>
 							<li>
-								<a class="services__item" href="./pages/">
+								<a class="services__item" href="./pages/service.html">
 									<div class="services__number"></div>
 									<h4 class="services__name">Налоговое право</h4>
 									<p class="services__desc">Разрешение споров между налогоплательщиками и налоговыми органами, связанных с уплатой налогов, налоговыми проверками и налоговыми вычетами</p>
@@ -446,7 +446,7 @@
 								</a>
 							</li>
 							<li>
-								<a class="services__item" href="./pages/">
+								<a class="services__item" href="./pages/service.html">
 									<div class="services__number"></div>
 									<h4 class="services__name">Трудовое право</h4>
 									<p class="services__desc">Разрешение конфликтов между работодателями и работниками, связанных с трудовыми отношениями, заработной платой, увольнением и дискриминацией</p>
@@ -461,7 +461,7 @@
 								</a>
 							</li>
 							<li>
-								<a class="services__item" href="./pages/">
+								<a class="services__item" href="./pages/service.html">
 									<div class="services__number"></div>
 									<h4 class="services__name">Интеллектуальная собственность</h4>
 									<p class="services__desc">Включает в себя защиту авторских прав, патентов, товарных знаков, коммерческих секретов и других объектов интеллектуальной собственности</p>
