--- a/index.html
+++ b/index.html
@@ -540,7 +540,7 @@
 										<h3 class="cases__item-title">Доказательство наличия долга для возврата займа в МФО</h3>
 										<p class="cases__item-desc">Бюро TALAN провело детальный аудит налоговых расходов компании и разработало стратегию оптимизации, позволив снизить налоговую нагрузку на 30%. Благодаря оперативным и грамотным решениям клиент смог существенно повысить финансовую стабильность и сосредоточиться на развитии бизнеса.</p>
 									</div>
-									<a class="cases__item-button" href="./pages">Подробнее <i class="cases__item-button--icon icon-arrow"></i></a>
+									<a class="cases__item-button" href="./pages/cases/template.html">Подробнее <i class="cases__item-button--icon icon-arrow"></i></a>
 								</div>
 							</li>
 							<li class="cases__item" data-type="administrative taxes antimonopoly" data-location="saratov">
@@ -556,7 +556,7 @@
 										<h3 class="cases__item-title">Налоговый спор крупного бизнеса</h3>
 										<p class="cases__item-desc">Бюро TALAN провело детальный аудит налоговых расходов компании и разработало стратегию оптимизации, позволив снизить налоговую нагрузку на 30%. Благодаря оперативным и грамотным решениям клиент смог существенно повысить финансовую стабильность и сосредоточиться на развитии бизнеса.</p>
 									</div>
-									<a class="cases__item-button" href="./pages">Подробнее <i class="cases__item-button--icon icon-arrow"></i></a>
+									<a class="cases__item-button" href="./pages/cases/template.html">Подробнее <i class="cases__item-button--icon icon-arrow"></i></a>
 								</div>
 							</li>
 							<li class="cases__item" data-type="administrative contracts antimonopoly" data-location="moscow">
@@ -571,7 +571,7 @@
 										<h3 class="cases__item-title">Налоговый спор крупного бизнеса</h3>
 										<p class="cases__item-desc">Бюро TALAN провело детальный аудит налоговых расходов компании и разработало стратегию оптимизации, позволив снизить налоговую нагрузку на 30%. Благодаря оперативным и грамотным решениям клиент смог существенно повысить финансовую стабильность и сосредоточиться на развитии бизнеса.</p>
 									</div>
-									<a class="cases__item-button" href="./pages">Подробнее <i class="cases__item-button--icon icon-arrow"></i></a>
+									<a class="cases__item-button" href="./pages/cases/template.html">Подробнее <i class="cases__item-button--icon icon-arrow"></i></a>
 								</div>
 							</li>
 							<li class="cases__item" data-type="administrative compliance patent" data-location="gomel">
@@ -586,7 +586,7 @@
 										<h3 class="cases__item-title">Оспаривание отцовства в судебном порядке</h3>
 										<p class="cases__item-desc">Бюро TALAN провело детальный аудит налоговых расходов компании и разработало стратегию оптимизации, позволив снизить налоговую нагрузку на 30%. Благодаря оперативным и грамотным решениям клиент смог существенно повысить финансовую стабильность и сосредоточиться на развитии бизнеса.</p>
 									</div>
-									<a class="cases__item-button" href="./pages">Подробнее <i class="cases__item-button--icon icon-arrow"></i></a>
+									<a class="cases__item-button" href="./pages/cases/template.html">Подробнее <i class="cases__item-button--icon icon-arrow"></i></a>
 								</div>
 							</li>
 							<li class="cases__item" data-type="administrative taxes criminal" data-location="astana">
@@ -601,7 +601,7 @@
 										<h3 class="cases__item-title">Налоговый спор крупного бизнеса</h3>
 										<p class="cases__item-desc">Бюро TALAN провело детальный аудит налоговых расходов компании и разработало стратегию оптимизации, позволив снизить налоговую нагрузку на 30%. Благодаря оперативным и грамотным решениям клиент смог существенно повысить финансовую стабильность и сосредоточиться на развитии бизнеса.</p>
 									</div>
-									<a class="cases__item-button" href="./pages">Подробнее <i class="cases__item-button--icon icon-arrow"></i></a>
+									<a class="cases__item-button" href="./pages/cases/template.html">Подробнее <i class="cases__item-button--icon icon-arrow"></i></a>
 								</div>
 							</li>
 							<li class="cases__item" data-type="administrative employment contracts" data-location="saint_petersburg">
@@ -617,11 +617,11 @@
 										<h3 class="cases__item-title">Налоговый спор крупного бизнеса</h3>
 										<p class="cases__item-desc">Бюро TALAN провело детальный аудит налоговых расходов компании и разработало стратегию оптимизации, позволив снизить налоговую нагрузку на 30%. Благодаря оперативным и грамотным решениям клиент смог существенно повысить финансовую стабильность и сосредоточиться на развитии бизнеса.</p>
 									</div>
-									<a class="cases__item-button" href="./pages">Подробнее <i class="cases__item-button--icon icon-arrow"></i></a>
+									<a class="cases__item-button" href="./pages/cases/template.html">Подробнее <i class="cases__item-button--icon icon-arrow"></i></a>
 								</div>
 							</li>
 						</ul>
-						<a class="cases__link" href="./pages/">Все кейсы<i class="cases__link--icon icon-arrow"></i></a>
+						<a class="cases__link" href="./pages/cases.html">Все кейсы<i class="cases__link--icon icon-arrow"></i></a>
 					</div>
 				</div>
 			</section>
